# sdl_atf

./: .gitignore  ATF  CMakeLists.txt  Makefile  README.md  start.sh
docs/Components View/: index.md
docs/Components View/assets/: components.plantuml
docs/Deployment View/: index.md
docs/Development View/: index.md
docs/History/: index.md
docs/Introduction/: index.md
docs/Operational View/: index.md
docs/References/: index.md
docs/Solution Background/: index.md
docs/Table of Contents/: index.md
docs/View-to-View Relations/: index.md
docs/diagrams/remote/: client_opensource.puml  client_sync.puml  remote_components.puml  server_opensource.puml  server_sync.puml
etc/: SdlApp.ini
etc/root/: index.html
examples/: DynamicSignalsAndSlots.lua  Security_sample.lua
modules/: ATF.lua  SDL.lua  SDLUtils.lua  applink_connection.lua  atf_logger.lua  cloud_connection.lua  config.lua  config_builder.lua  config_loader.lua  connecttest.lua  event_dispatcher.lua  expectations.lua  file_connection.lua  format.lua  hmi_connection.lua  launch.lua  message_dispatcher.lua  mobile_connection.lua  mobile_session.lua  mobile_session_impl.lua  openssl.lua  remote_hmi_adapter_connection.lua  sdl_logger.lua  security_manager.lua  tcp_connection.lua  testbase.lua
modules/app/: main.lua  mob.lua  test.lua  utils.lua
modules/atf/: util.lua
modules/configuration/: app_config.lua  base_config.lua  connection_config.lua  default_applications_config.lua  mobile_devices_config.lua  websocket_local_config.lua  websocket_remote_config.lua
modules/configuration/_loader/: app_config_loader.lua  security_config_loader.lua
modules/configuration/local/: base_config.lua
modules/configuration/local/_loader/: security_config_loader.lua
modules/configuration/remote_linux/: base_config.lua  connection_config.lua
modules/debug/: debuger.lua
modules/hmi_adapter/: hmi_adapter_controller.lua  remote_hmi_adapter.lua  websocket_hmi_adapter.lua
modules/luv/: datetime.lua  network.lua  timers.lua  uv.lua
modules/luv/network/: tcp.lua  web_socket.lua
modules/luv/network/websocket/: client_uv.lua  frame.lua  handshake.lua  tools.lua
modules/mobile_adapter/: mobile_adapter_controller.lua  tcp_mobile_adapter.lua  webengine_mobile_adapter.lua  websocket_mobile_adapter.lua
modules/mobile_adapter/emulated/: mobile_adapter_controller.lua
modules/mobile_adapter/real/: http_connection.lua  real_device_communication_handler.lua  real_device_tcp_transport_adapter.lua  rest_api_handler.lua
modules/mobile_device/: mobile_device_constants.lua  mobile_device_manager.lua
modules/protocol_handler/: ford_protocol_constants.lua  protocol_handler.lua
modules/remote/: remote_application_utils.lua  remote_connection.lua  remote_constants.lua  remote_file_utils.lua  remote_mq_handler.lua  remote_mq_utils.lua
modules/security/: security_constants.lua  security_manager.lua
modules/services/: control_service.lua  heartbeat_monitor.lua  rpc_service.lua
modules/utils/: file_utils.lua  local_file_utils.lua
src/: global.cpp  global.h  lua_interpreter.cc  lua_interpreter.h  lua_openssl.cc  main.cc  main.cpp  marshal.cc  marshal.h  network.cc  qtdynamic.h  qtlua.cc  qtlua.h  requestmapper.cpp  ssl.cc  timers.h
src/bson/include/: bson_array.h  bson_object.h  bson_util.h
src/bson/src/: bson_lua_wrapper.c
src/bson/src/bson/: bson_array.c  bson_object.c  bson_util.c
src/controller/: sdlcontrolcontroller.cpp  sdlcontrolcontroller.h  sdldatacontroller.cpp  sdldatacontroller.h
src/httpserver/: CMakeLists.txt
src/logging/: CMakeLists.txt
src/luatime/: CMakeLists.txt  lua_time.cc
src/luaxml/: CMakeLists.txt
src/remote_adapter/: CMakeLists.txt  README.md
src/remote_adapter/common/: constants.h
src/remote_adapter/remote_adapter_client/: CMakeLists.txt  sdl_remote_adapter_client.cc  sdl_remote_adapter_client.h
src/remote_adapter/remote_adapter_client/lua_lib/: lua_remote_library.cc  lua_sdl_remote_adapter_library.cc  sdl_remote_adapter_client_lua_wrapper.cc  sdl_remote_adapter_client_lua_wrapper.h
src/remote_adapter/remote_adapter_client/qt_impl/: sdl_remote_adapter_qt_client.cc  sdl_remote_adapter_qt_client.h  sdl_remote_adapter_receive_thread.cc  sdl_remote_adapter_receive_thread.h
src/remote_adapter/remote_adapter_client/qt_impl/lua_lib/: lua_sdl_remote_adapter_library.cc  sdl_remote_adapter_qt_client_lua_wrapper.cc  sdl_remote_adapter_qt_client_lua_wrapper.h
src/remote_adapter/remote_adapter_server/: CMakeLists.txt  main.cc  mqueue_manager.cc  mqueue_manager.h  mqueue_manager_test.cc  shmemory_manager.cc  shmemory_manager.h  tcp_message_broker.cpp  tcp_message_broker.h  utils_manager.cc  utils_manager.h
src/sdl/: lua_interpreter.cc  lua_interpreter.h  network.h  qtdynamic.cc
src/templateengine/: CMakeLists.txt
tools/runners/: common.sh
